--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -181,14 +181,14 @@
     <div class="header">
         <div class="icons">
             <a href="level_page.html">
-                <img src="/page_photo/back.png" alt="Back">
+                <img src="/public/page_photo/back.png" alt="Back">
             </a>
             <div class="level-indicator">Easy</div>
         </div>
         <div class="title">Scenario 1 - Booking Room</div>
         <div class="icons">
-            <img src="/page_photo/home.png" alt="Home">
-            <img src="/page_photo/user.png" alt="Profile">
+            <img src="/public/page_photo/home.png" alt="Home">
+            <img src="/public/page_photo/user.png" alt="Profile">
         </div>
     </div>
 
