--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Language Speaking Practice</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -174,6 +173,26 @@
             transform: translateY(-3px);
             box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
         }
+
+        ul {
+            display: block !important;
+        }
+
+        ul.list-dot {
+            list-style-type: disc !important;
+        }
+
+        ul.list-circle {
+            list-style-type: circle !important;
+        }
+
+        ul.list-square {
+            list-style-type: square !important;
+        }
+
+        li {
+            list-style-position: inside;
+        }
     </style>
 </head>
 
@@ -204,16 +223,25 @@
             <!-- Chat Area -->
             <div class="chat-area" id="chatArea">
                 <text_area id="convert_text"></text_area>
+                <div id="summary-area" class="d-none pb-3 border-1 h-100">
+                    <div class="px-3 py-2" style="background-color: #e0e8f9;">
+                        <p class="text-center">Summarized Chat</p>
+                    </div>
+                    <div id="summarizedContent" class="p-3" style="max-height: calc(100% - 40px); overflow-y: auto;">
+                    </div>
+                </div>
             </div>
 
             <!-- Summary Button -->
             <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-                <a href="summary.html" class="summary-btn">Summary</a>
+                <button class="summary-btn">Summary</button>
             </div>
         </div>
     </div>
 
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/summary.jsx"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -225,29 +253,31 @@
             // });
 
             // Fetch and display chat history every second
-            setInterval(function () {
-                $.get('http://127.0.0.1:5000/get_chat_history', function (data) {
-                    $('#chatArea').empty();
-                    data.forEach(function (message) {
-                        if (message.role !== 'system') {  // Exclude system message
-                            var bubbleClass = message.role === 'user' ? 'user' : 'ai';
-                            $('#chatArea').append('<div class="chat-bubble ' + bubbleClass + '">' + message.content + '</div>');
-                        }
-                    });
-                    // Scroll to the bottom of the chat area
-                    $('#chatArea').scrollTop($('#chatArea')[0].scrollHeight);
+            // setInterval(function () {
+            //     $.get('http://127.0.0.1:5000/get_chat_history', function (data) {
+            //         $('#chatArea').empty();
+            //         data.forEach(function (message) {
+            //             if (message.role !== 'system') {  // Exclude system message
+            //                 var bubbleClass = message.role === 'user' ? 'user' : 'ai';
+            //                 $('#chatArea').append('<div class="chat-bubble ' + bubbleClass + '">' + message.content + '</div>');
+            //             }
+            //         });
+            //         // Scroll to the bottom of the chat area
+            //         $('#chatArea').scrollTop($('#chatArea')[0].scrollHeight);
 
-                    // Check if the chat has ended
-                    if (data.length > 0 && data[data.length - 1].role === 'user' && data[data.length - 1].content.toLowerCase().includes('goodbye')) {
-                        chatEnded = true;
-                        $('#summaryBtn').removeClass('disabled');
-                    } else {
-                        chatEnded = false;
-                        $('#summaryBtn').addClass('disabled');
-                    }
-                });
-            }, 1000);
+            //         // Check if the chat has ended
+            //         if (data.length > 0 && data[data.length - 1].role === 'user' && data[data.length - 1].content.toLowerCase().includes('goodbye')) {
+            //             chatEnded = true;
+            //             $('#summaryBtn').removeClass('disabled');
+            //         } else {
+            //             chatEnded = false;
+            //             $('#summaryBtn').addClass('disabled');
+            //         }
+            //     });
+            // }, 1000);
+
         });
+
     </script>
 </body>
 
