update sy changes

--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -256,8 +256,10 @@
             <!-- Buttons -->
             <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
                 <button class="summary-btn" data-bs-toggle="modal" data-bs-target="#summarize"
-                    id="btn-showSummaryContent" disabled>Summary</button>
+                    id="btn-showSummaryContent" disabled>Review</button>
             </div>
+            <!-- <button class="end-btn">End</button> -->
+            <!-- <button class="review-btn">Review</button> -->
         </div>
 
         <div class="modal fade" id="summarize" tabindex="-1" role="dialog" aria-labelledby="summarizeTitle"
@@ -278,8 +280,7 @@
                         <!-- <button type="button" class="btn btn-summary rounded-pill" data-bs-dismiss="modal">Close</button> -->
                     </div>
                 </div>
-                <button class="end-btn">End</button>
-                <button class="review-btn">Review</button>
+                
             </div>
         </div>
     </div>
