--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -242,7 +242,7 @@
     <div class="main-container d-flex justify-content-center">
         <div class="left-panel col-6">
             <!-- AI Character -->
-            <div id="root"></div>
+            <div id="root" class="h-100 w-100"></div>
             <div class="ai-name">Joseph</div>
             <div class="ai-description">Description</div>
         </div>
@@ -280,7 +280,6 @@
                         <!-- <button type="button" class="btn btn-summary rounded-pill" data-bs-dismiss="modal">Close</button> -->
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
